tests/react_functional/react_functional.exp
Error: test.js:4
  4: <F />; // error: missing `foo`
     ^^^^^ props. This type is incompatible with
  3: function F(props: { foo: string }) {}
                       ^^^^^^^^^^^^^^^ object type
  Property `foo` is incompatible:
      3: function F(props: { foo: string }) {}
                           ^^^^^^^^^^^^^^^ property `foo`. Property not found in
      4: <F />; // error: missing `foo`
         ^^^^^ props

Error: test.js:5
  5: <F foo={0} />; // error: number ~> string
     ^^^^^^^^^^^^^ props. This type is incompatible with
  3: function F(props: { foo: string }) {}
                       ^^^^^^^^^^^^^^^ object type
  Property `foo` is incompatible:
      5: <F foo={0} />; // error: number ~> string
                 ^ number. This type is incompatible with
      3: function F(props: { foo: string }) {}
                                  ^^^^^^ string

Error: test.js:9
  9: function G(props: { foo: string|numner }) {}
                                     ^^^^^^ numner. Could not resolve name

Error: test.js:13
 13: <Z />; // error, expected React component
     ^^^^^ `Z` element. Expected React component instead of
 13: <Z />; // error, expected React component
      ^ number


Found 4 errors
